--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
 									<span class="icon major fa-code"></span>
 									<h3>Alliance Francaise:</h3>
 									<h3>Creativity</h3>
+									<h3>Learning Outcome:</h3>
 									<p><u>Tuesday, September 11, 2018</u></p>
 									<p>Over the summer, I registered in a French course at Alliance Francaise in the Diplomatic Quarter. I would go there to acquire knowledge in the French language and meet other peeople who have different goals than me. One of the reasons I wanted to learn a new language is because I believe in Sapir-Whorf Hypothesis. The hypothesis states that different languages create different ways of thinking. However, there were other reasons why I wanted to learn French. </p>
 									<p>From this experience, I gained many IB learner profiles. The most notable one was communicator, for the reason that I gained relationships with my classmates and learned the language by communicating in class. After the 7 week course, I felt my perspective of the world changed, which indicates that Sapir-Whorf hypothesis is correct. Aside from the language itself, I learned about the French culture and how they live their daily lives.</p>
@@ -91,6 +92,7 @@
 									<span class="icon major fa-lock"></span>
 									<h3>Saudi National Day:</h3>
 									<h3>Service</h3>
+									<h3>Learning Outcome:</h3>
 									<p><u>Thursday, September 27, 2018</u></p>
 									<p>Today, we celebrated the 88th Saudi National day in school. As part of the celebration, our superintendent invited students from another school that were suffering from down-syndrome. I volunteered to aid in greeting, welcoming, and making sure the down-syndrome students did what they were supposed to do. When they arrived, I tried to greet them with a big smile and kind words. Then, we helped them sit down in their authorized seats. </p>
 									<p>After my interactions with the children, I realized the blessing I was in as I began to reflect on the experience. I felt somewhat guilty because they did nothing to wrong to get diseased and I did nothing to deserve to not get diseased. Another learner profile I used was caring. Whenever I interacted with them, I tried to show how much I care about them. A specific incident I remember would be when I saw one of the students who appeared to be lost, so I helped him find his friends.</p>
@@ -99,6 +101,7 @@
 									<span class="icon major fa-cog"></span>
 									<h3>Driving Lessons:</h3>
 									<h3>Creativity</h3>
+									<h3>Learning Outcome:</h3>
 									<p><u>Saturday, October 28, 2018</u></p>
 									<p>Yesterday, my older brother took me out to teach me how to drive. After lunch, he took me to an area where we can train easily and we started training. We picked an empty parking to cones because it is ideal for driving training. He would show me things to do, then I would try to replicate it. We worked on turning, parking, and awareness of your surroundings. Also, we worked on getting used to the car and its dimensions and how to deal with certain situations.</p>
 									<p>This isn't the first time nor last time I perform this activity, which allowed to demonstrate and develop in many IB learner profiles. However, I believe I displayed other important skills. First of all, I dislplayed my patience while drving; not only in the act itself, but in understanding that learning how to drive is going to take time. I believe the IB learner profile I demonstarted the most was priincipled, which correlates to being patient. I showed my ability to control a car while being displined and understanding the danger of this activity.</p>
@@ -107,6 +110,7 @@
 									<span class="icon major fa-desktop"></span>
 									<h3>A Walk in the Park:</h3>
 									<h3>Creativity</h3>
+									<h3>Learning Outcome:</h3>
 									<p><u>Monday, November 12, 2018</u></p>
 									<p>This week in school, our language and literature A teacher decided to take our lesson for the day to a nearby park. Me along with the teacher and the other students headed out to the park in the beginning of class taking only our books, which we are reading in class and is called "1984 by George Orwell". On our way to the park, my classmate Nawaf gave us a fast summary about the events that happened in Chapter 5. Then, when we arrived at the park we all split up and read Chapter 6 in the peace of the park.</p>
 									<p>After returning back to school, I decided to write a CAS reflection on this experience. I believe that some this experience I gained values that weren't present in me before. For example, I never realized how satisfying it is to interact with nature and how peaceful it is to read a book while hearing the chirping of the birds. I displayed a very important IB learner profile, which was being openminded about the creation of nature. In my opinion, we, as a commnuity, should contemplate the beautiful nature around us.</p>
@@ -115,6 +119,7 @@
 									<span class="icon major fa-chain"></span>
 									<h3>Trip to Al-Baha</h3>
 									<h3>Creativity</h3>
+									<h3>Learning Outcome:</h3>
 									<p><u>Sunday, November 18, 2018</u></p>
 									<p>Last weekend, my older brothers and I traveled to Al-Baha to attend our friend's wedding. We arrived Friday afternoon and as soon as we landed at the airport, we realized the beauty of nature in Al-Baha. As we drove to the hotel, I continued to admire the beauty of the Hejaz Mountains as well as take a couple of pictures here and there. In the evening, we drove to the wedding. As soon as we arrived, we understood the difference of traditions in Al-Baha and other regions in the Kingdom. The next day we visited toursit attractions such as Dhey Al Ain Village and Al Raghdan Forest Park.</p>
 									<p>While reflecting on the trip, i realized that this experience changed me as a person. First of all, I displayed and developed many of my IB learner profiles. I was openminded during the wedding towards the traditions of the people of Al-Baha. Also, I was reflective about how God was able to create such beautiful mountains and how nature works; from the trees to the mountains to the bees. Finally, I was principled because I visited public property that cannot be fixed if it were to be damaged.</p>
@@ -123,6 +128,7 @@
 									<span class="icon major fa-diamond"></span>
 									<h3>Durrat Al Aros</h3>
 									<h3>Creativity</h3>
+									<h3>Learning Outcome:</h3>
 									<p><u>Thursday, December 27, 2018</u></p>
 									<p>During the winter vacation, my family and I travelled to Jeddah to visit family. During our visit my grandparents rented a beach house outside the city for us to spend the weekend in. The house had its own private beach and we spent the whole day on the shores of the Red Sea. I swam with my cousins and went jetskiing. Also, we drove golf cars around the compound and enjoyed the beauty of the sea and the weather.</p>
 									<p>During the trip, I displayed many essential characteristics including leadership and responsibility. Throughout our stay, I was responsible for taking care of my younger cousins and siblings on many occasions. This helped me develop my principled IB learner profile by taking responsibility for my own actions and evaluating others actions for their own sake. Another way I was principled was the responsibility I carried while driving the golf car around the compound on the same road with other cars.</p>
@@ -131,6 +137,7 @@
 									<span class="icon major fa-code"></span>
 									<h3>Biking</h3>
 									<h3>Action</h3>
+									<h3>Learning Outcome:</h3>
 									<p><u>Friday, December 28, 2018</u></p>
 									<p>While in our beach house in Jeddah, we rented bikes. My cousins and I rented bikes and started racing around the compounds. The bike paths were filled with people walking so we had to be very careful that we don't hurt anyone. The night after the biking I couldn't sleep because my hamstring and knee muscles were hurting a lot. It was hurting without me even moving my legs, which ruined the experience afterwards.</p>
 									<p>Throughout this experience, I was a risk-taker because I would bike at high speeds through crowds of people racing with my cousins, however I was cautious of the people around me and slowed down when I needed to. After the experience, I reflected on the experience through the pains that I suffered in my knee muscles and I agreed with myself that I will try to practice sports, which is why I signed up for the basketball program in the school.</p>
@@ -139,6 +146,7 @@
 									<span class="icon major fa-lock"></span>
 									<h3>Hiking in the Diplomatic Quarter</h3>
 									<h3>Action</h3>
+									<h3>Learning Outcome:</h3>
 									<p><u>Wednesday, January 30, 2019</u></p>
 									<p>My classmate and I acted as student leaders during a Grade 9 field trip to the Diplomatic Quarter. The field trip was a hike around the diplomatic quarter's beautiful parks and roundabouts. However, we faced some problems during trip. An officer of the Diplomatic Security Forces stopped us to interrogate. He asked us if we had permission to be in the diplomatic quarters and due to some confusion, our permission form was lost. Since, both the teachers with us didn't speak Arabic, I was the person communicating to with the officer. After 15 minutes of interrogation, we continued our path to iHop, where we had breakfast and then headed back to school.</p>
 									<p>Throughout the field trip, I displayed my leadership in a variety of ways. First of all, I was leading the group through the hike with my classmate. Since both our instructors hadn't been on the trip before, we were given the opportunity to lead the group throughout our journey. I also displayed my leadership qualities when we were being interrogated by the Diplomatic Security Forces officer. I acted as a translater between the teachers incharge and the officer while explaining to the officer the purpose of the trip and our final destination.</p>
@@ -147,6 +155,7 @@
 									<span class="icon major fa-cog"></span>
 									<h3>Basketball</h3>
 									<h3>Action</h3>
+									<h3>Learning Outcome:</h3>
 									<p><u>Monday, February 4, 2019</u></p>
 									<p>After reflecting on my previous activities, I realized that I need to participate in more physical activities. So I decided to sign up for basketball tryouts in school and participate in more physcial activities. Today, was my first day and I realized that my fitness levels are below average because I was tired from the first ten minutes of practice. Compared to my fellow teammates who lasted the whole 30 minutes of practice. Afterwards, I decided to start to practice basketball outside training hours so I can improve my fitness while as well developing my of my hobbies.</p>
 									<p>Throughout the experience, I displayed my reflective skills. First of all, I reflected on my biking experience by deciding to participate in more physical activities during my weekly routines. Also, after participating in my first basketball training I decided to practice sports more to improve my fitness levels. Finally, I made through friends throughout this experience with students in lower grades and with our trainer, Mr. Tat Picott. Overall, it was a fun experience that began from a random experience with my family and by reflecting on the experience I was able to began practicing my hobby more for my own benefit.</p>
@@ -155,9 +164,10 @@
 									<span class="icon major fa-desktop"></span>
 									<h3>Personal Proect Volunteering</h3>
 									<h3>Service</h3>
+									<h3>Learning Outcome:</h3>
 									<p><u>Wednesday, February 6, 2019</u></p>
-									<p>TEXT</p>
-									<p>TEXT</p>
+									<p>Today, our school hosted the personal project exhibition for the Grade 10 students and I volunteered to act as a volunteer during the exhibition. When I arrived at the exhibition, I was directed to greet the parents and family members of students at the door and lead them to the exhibition from the gate. My friend and I were standing at the gate practicing how we will greet the parents. We decided that I will greet the parents and my friend will walk the parents to the exhibition.</p>
+									<p>During this experience, I displayed many IB learner profiles. First of all, I was a communicator by greeting the parents in the appropriate language. Most of the time I used Arabic to greet the parents, however some parents don't speak Arabic so I greeted them in English in an appropriate way. Also, I was responsible to represent the school infront of the parents so I need to respectful and reperesent the school in an appropriate way.</p>
 								</section>
 							</div>
 							<ul class="actions">
