--- a/index.html
+++ b/index.html
@@ -169,6 +169,16 @@
 									<p>Today, our school hosted the personal project exhibition for the Grade 10 students and I volunteered to act as a volunteer during the exhibition. When I arrived at the exhibition, I was directed to greet the parents and family members of students at the door and lead them to the exhibition from the gate. My friend and I were standing at the gate practicing how we will greet the parents. We decided that I will greet the parents and my friend will walk the parents to the exhibition.</p>
 									<p>During this experience, I displayed many IB learner profiles. First of all, I was a communicator by greeting the parents in the appropriate language. Most of the time I used Arabic to greet the parents, however some parents don't speak Arabic so I greeted them in English in an appropriate way. Also, I was responsible to represent the school infront of the parents so I need to respectful and reperesent the school in an appropriate way.</p>
 								</section>
+								<section>
+									<span class="icon major fa-desktop"></span>
+									<h3>Liverpool Trip</h3>
+									<h3>Action</h3>
+									<h3>Learning Outcome:</h3>
+									<p><u>Saturday, June 23, 2019</u></p>
+									<p></p>
+									<p></p>
+								</section>
+								
 							</div>
 							<ul class="actions">
 								<li><a href="generic.html" class="button">Learn more</a></li>
