--- a/index.html
+++ b/index.html
@@ -171,6 +171,24 @@
 								</section>
 								<section>
 									<span class="icon major fa-desktop"></span>
+									<h3>Turkey Trip</h3>
+									<h3>Action</h3>
+									<h3>Learning Outcome:</h3>
+									<p><u>Sunday, April 28, 2019</u></p>
+									<p></p>
+									<p></p>
+								</section>
+								<section>
+									<span class="icon major fa-desktop"></span>
+									<h3>Helping my Grandfather</h3>
+									<h3>Service</h3>
+									<h3>Learning Outcome:</h3>
+									<p><u>Sunday, May 26, 2019</u></p>
+									<p></p>
+									<p></p>
+								</section>
+								<section>
+									<span class="icon major fa-desktop"></span>
 									<h3>Liverpool Trip</h3>
 									<h3>Action</h3>
 									<h3>Learning Outcome:</h3>
@@ -178,7 +196,15 @@
 									<p></p>
 									<p></p>
 								</section>
-								
+								<section>
+									<span class="icon major fa-desktop"></span>
+									<h3>Antibes International Center</h3>
+									<h3>Creativity</h3>
+									<h3>Learning Outcome:</h3>
+									<p><u>Saturday, June 29, 2019-Saturday, July 27, 2019</u></p>
+									<p></p>
+									<p></p>
+								</section>
 							</div>
 							<ul class="actions">
 								<li><a href="generic.html" class="button">Learn more</a></li>
