--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
 									<h3>Service</h3>
 									<h3>Learning Outcome:</h3>
 									<p><u>Sunday, May 26, 2019</u></p>
-									<p></p>
-									<p></p>
+									<p>During last year my grandfather from my mother's side has been suffering from health issues regarding his kidneys. At the beginning of 2019, his doctor decided that it was necessary for him to get a kidney transplant. Fortunately, the kidney transplant was successful but my grandfather was given a list of about 20 medications that he must take for the next year or so. So, I offered to create an Excel spreadsheet to organize the medications in the way he wanted.</p>
+									<p>From this experience, I learned </p>
 								</section>
 								<section>
 									<span class="icon major fa-desktop"></span>
@@ -193,7 +193,7 @@
 									<h3>Action</h3>
 									<h3>Learning Outcome:</h3>
 									<p><u>Saturday, June 23, 2019</u></p>
-									<p></p>
+									<p>This summer, my family and I decided to take a trip to the UK specifically London for a week.</p>
 									<p></p>
 								</section>
 								<section>
