--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
 									<h3>Action</h3>
 									<h3>Learning Outcome:</h3>
 									<p><u>Sunday, April 28, 2019</u></p>
-									<p></p>
-									<p></p>
+									<p>My friend from Kazakhstan invited my brother and I to attend his wedding in Shymkent, Kazakhstan and we decided to go. We going to transit in Istanbul before heading to Kazakhstan. To our disbelief, when we arrived in Istanbul we were informed that our flight to Shymkent was cancelled and that there weren't any other flights. We decided to stay in Istanbul and take our return flight back to Riyadh three days later. During these three days, I was incharge of being the tourist guide since my brother has never been to Istanbul and this is my fourth time in the city.</p>
+									<p>Throughout this experience, I improved many of my leadership skills and learned to depend on myself even more. My brother was depending on me to make these three days enjoyful while at the same time staying away from danger. Fortunately, we enjoyed our unplanned visit to Istanbul visiting many tourist attractions such as the Blue Mosque and Taksim Square, as well as many walks in Istanbul's fantastic shopping centers. </p>
 								</section>
 								<section>
 									<span class="icon major fa-desktop"></span>
