--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 									<h3>Learning Outcome:</h3>
 									<p><u>Sunday, May 26, 2019</u></p>
 									<p>During last year my grandfather from my mother's side has been suffering from health issues regarding his kidneys. At the beginning of 2019, his doctor decided that it was necessary for him to get a kidney transplant. Fortunately, the kidney transplant was successful but my grandfather was given a list of about 20 medications that he must take for the next year or so. So, I offered to create an Excel spreadsheet to organize the medications in the way he wanted.</p>
-									<p>From this experience, I learned </p>
+									<p>From this experience, I helped a person in need for my assistance. Not only did I improve my knowledge about Microsoft Excel, but I taught my grandfather how to use Excel to change or cancel any medications in the near future. I believe that this experience made me feel better about myself and motivated me to make a difference in my society. This might seem like an easy task, but I had to make sure that all the information regarding doses and extra information therefore I was given huge responsibility with this task.</p>
 								</section>
 								<section>
 									<span class="icon major fa-desktop"></span>
