--- a/index.html
+++ b/index.html
@@ -193,8 +193,8 @@
 									<h3>Action</h3>
 									<h3>Learning Outcome:</h3>
 									<p><u>Saturday, June 23, 2019</u></p>
-									<p>This summer, my family and I decided to take a trip to the UK specifically London for a week.</p>
-									<p></p>
+									<p>This summer, my family and I decided to take a trip to the UK, specifically London, for a week. During this trip, my family and I decided to visit Liverpool. Liverpool is significant to us because my mother was born in Liverpool and I support the local football club in Liverpool. We bought train tickets for a one-day trip to Liverpool and I was incharge of leading the group. Not only did we take the metro to get to the train station, but we had to change lines at one of the biggest metro stations in London. Luckily, I was able to navigate our way and get us to Liverpool safe and happy.</p>
+									<p>Throughout this experience, I demonstrated many leadership skills. Not only will these skills help me become a better leader, but they help me to become a more independent man. Since, this is my senior year and I plan to study abroad on my own, this experience gave me the opportunity to prove to my family that I am an independent young man. Also, this experience helped me understand how metros work around the world. This is significant because the Riyadh Metro is not far away from operating.</p>
 								</section>
 								<section>
 									<span class="icon major fa-desktop"></span>
