--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@
 									<h3>Creativity</h3>
 									<h3>Learning Outcome:</h3>
 									<p><u>Saturday, June 29, 2019-Saturday, July 27, 2019</u></p>
-									<p></p>
-									<p></p>
+									<p>This summer, I decided to take a French language course in Antibes, France. The course lasted 4 weeeks. During this trip, I stayed with a host family and 6 roommates in total over my 4 week stay. This was the first time I travelled without my family and I was completely independent for the first time in my life. I was responsible for my actions, my studies, and in how i will spend my time. In the end, this trip ended up being the best trip in my life despite the first couple of days being very tough for me emotionally.</p>
+									<p>During this trip, I learned many skills that will help me in the future. First of all, I learned how to be responsible by following school rules and regulations while having fun at the same time. Also, since I am a senior and plan to study abroad next year, this experience gave me a brief taste of how life might be like living on my own with new roommates in a completely new setting. I believe that this experience has set me up well to move on into a new chapter in my life.</p>
 								</section>
 							</div>
 							<ul class="actions">
