--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 									<span class="icon major fa-code"></span>
 									<h3>Alliance Francaise:</h3>
 									<h3>Creativity</h3>
-									<h3>Learning Outcome:</h3>
+									<h3>Learning Outcome: 1, 4, 5</h3>
 									<p><u>Tuesday, September 11, 2018</u></p>
 									<p>Over the summer, I registered in a French course at Alliance Francaise in the Diplomatic Quarter. I would go there to acquire knowledge in the French language and meet other peeople who have different goals than me. One of the reasons I wanted to learn a new language is because I believe in Sapir-Whorf Hypothesis. The hypothesis states that different languages create different ways of thinking. However, there were other reasons why I wanted to learn French. </p>
 									<p>From this experience, I gained many IB learner profiles. The most notable one was communicator, for the reason that I gained relationships with my classmates and learned the language by communicating in class. After the 7 week course, I felt my perspective of the world changed, which indicates that Sapir-Whorf hypothesis is correct. Aside from the language itself, I learned about the French culture and how they live their daily lives.</p>
@@ -92,7 +92,7 @@
 									<span class="icon major fa-lock"></span>
 									<h3>Saudi National Day:</h3>
 									<h3>Service</h3>
-									<h3>Learning Outcome:</h3>
+									<h3>Learning Outcome: 1, 5, 7</h3>
 									<p><u>Thursday, September 27, 2018</u></p>
 									<p>Today, we celebrated the 88th Saudi National day in school. As part of the celebration, our superintendent invited students from another school that were suffering from down-syndrome. I volunteered to aid in greeting, welcoming, and making sure the down-syndrome students did what they were supposed to do. When they arrived, I tried to greet them with a big smile and kind words. Then, we helped them sit down in their authorized seats. </p>
 									<p>After my interactions with the children, I realized the blessing I was in as I began to reflect on the experience. I felt somewhat guilty because they did nothing to wrong to get diseased and I did nothing to deserve to not get diseased. Another learner profile I used was caring. Whenever I interacted with them, I tried to show how much I care about them. A specific incident I remember would be when I saw one of the students who appeared to be lost, so I helped him find his friends.</p>
@@ -101,7 +101,7 @@
 									<span class="icon major fa-cog"></span>
 									<h3>Driving Lessons:</h3>
 									<h3>Creativity</h3>
-									<h3>Learning Outcome:</h3>
+									<h3>Learning Outcome: 1, 2, 3, 4</h3>
 									<p><u>Saturday, October 28, 2018</u></p>
 									<p>Yesterday, my older brother took me out to teach me how to drive. After lunch, he took me to an area where we can train easily and we started training. We picked an empty parking to cones because it is ideal for driving training. He would show me things to do, then I would try to replicate it. We worked on turning, parking, and awareness of your surroundings. Also, we worked on getting used to the car and its dimensions and how to deal with certain situations.</p>
 									<p>This isn't the first time nor last time I perform this activity, which allowed to demonstrate and develop in many IB learner profiles. However, I believe I displayed other important skills. First of all, I dislplayed my patience while drving; not only in the act itself, but in understanding that learning how to drive is going to take time. I believe the IB learner profile I demonstarted the most was priincipled, which correlates to being patient. I showed my ability to control a car while being displined and understanding the danger of this activity.</p>
@@ -110,7 +110,7 @@
 									<span class="icon major fa-desktop"></span>
 									<h3>A Walk in the Park:</h3>
 									<h3>Creativity</h3>
-									<h3>Learning Outcome:</h3>
+									<h3>Learning Outcome: 1, 5</h3>
 									<p><u>Monday, November 12, 2018</u></p>
 									<p>This week in school, our language and literature A teacher decided to take our lesson for the day to a nearby park. Me along with the teacher and the other students headed out to the park in the beginning of class taking only our books, which we are reading in class and is called "1984 by George Orwell". On our way to the park, my classmate Nawaf gave us a fast summary about the events that happened in Chapter 5. Then, when we arrived at the park we all split up and read Chapter 6 in the peace of the park.</p>
 									<p>After returning back to school, I decided to write a CAS reflection on this experience. I believe that some this experience I gained values that weren't present in me before. For example, I never realized how satisfying it is to interact with nature and how peaceful it is to read a book while hearing the chirping of the birds. I displayed a very important IB learner profile, which was being openminded about the creation of nature. In my opinion, we, as a commnuity, should contemplate the beautiful nature around us.</p>
@@ -119,7 +119,7 @@
 									<span class="icon major fa-chain"></span>
 									<h3>Trip to Al-Baha</h3>
 									<h3>Creativity</h3>
-									<h3>Learning Outcome:</h3>
+									<h3>Learning Outcome: 1, 2, 3, 5</h3>
 									<p><u>Sunday, November 18, 2018</u></p>
 									<p>Last weekend, my older brothers and I traveled to Al-Baha to attend our friend's wedding. We arrived Friday afternoon and as soon as we landed at the airport, we realized the beauty of nature in Al-Baha. As we drove to the hotel, I continued to admire the beauty of the Hejaz Mountains as well as take a couple of pictures here and there. In the evening, we drove to the wedding. As soon as we arrived, we understood the difference of traditions in Al-Baha and other regions in the Kingdom. The next day we visited toursit attractions such as Dhey Al Ain Village and Al Raghdan Forest Park.</p>
 									<p>While reflecting on the trip, i realized that this experience changed me as a person. First of all, I displayed and developed many of my IB learner profiles. I was openminded during the wedding towards the traditions of the people of Al-Baha. Also, I was reflective about how God was able to create such beautiful mountains and how nature works; from the trees to the mountains to the bees. Finally, I was principled because I visited public property that cannot be fixed if it were to be damaged.</p>
@@ -128,7 +128,7 @@
 									<span class="icon major fa-diamond"></span>
 									<h3>Durrat Al Aros</h3>
 									<h3>Creativity</h3>
-									<h3>Learning Outcome:</h3>
+									<h3>Learning Outcome: 1, 3, 5</h3>
 									<p><u>Thursday, December 27, 2018</u></p>
 									<p>During the winter vacation, my family and I travelled to Jeddah to visit family. During our visit my grandparents rented a beach house outside the city for us to spend the weekend in. The house had its own private beach and we spent the whole day on the shores of the Red Sea. I swam with my cousins and went jetskiing. Also, we drove golf cars around the compound and enjoyed the beauty of the sea and the weather.</p>
 									<p>During the trip, I displayed many essential characteristics including leadership and responsibility. Throughout our stay, I was responsible for taking care of my younger cousins and siblings on many occasions. This helped me develop my principled IB learner profile by taking responsibility for my own actions and evaluating others actions for their own sake. Another way I was principled was the responsibility I carried while driving the golf car around the compound on the same road with other cars.</p>
@@ -137,7 +137,7 @@
 									<span class="icon major fa-code"></span>
 									<h3>Biking</h3>
 									<h3>Action</h3>
-									<h3>Learning Outcome:</h3>
+									<h3>Learning Outcome: 1, 2, 3, 4</h3>
 									<p><u>Friday, December 28, 2018</u></p>
 									<p>While in our beach house in Jeddah, we rented bikes. My cousins and I rented bikes and started racing around the compounds. The bike paths were filled with people walking so we had to be very careful that we don't hurt anyone. The night after the biking I couldn't sleep because my hamstring and knee muscles were hurting a lot. It was hurting without me even moving my legs, which ruined the experience afterwards.</p>
 									<p>Throughout this experience, I was a risk-taker because I would bike at high speeds through crowds of people racing with my cousins, however I was cautious of the people around me and slowed down when I needed to. After the experience, I reflected on the experience through the pains that I suffered in my knee muscles and I agreed with myself that I will try to practice sports, which is why I signed up for the basketball program in the school.</p>
@@ -146,7 +146,7 @@
 									<span class="icon major fa-lock"></span>
 									<h3>Hiking in the Diplomatic Quarter</h3>
 									<h3>Action</h3>
-									<h3>Learning Outcome:</h3>
+									<h3>Learning Outcome: 1, 2, 5</h3>
 									<p><u>Wednesday, January 30, 2019</u></p>
 									<p>My classmate and I acted as student leaders during a Grade 9 field trip to the Diplomatic Quarter. The field trip was a hike around the diplomatic quarter's beautiful parks and roundabouts. However, we faced some problems during trip. An officer of the Diplomatic Security Forces stopped us to interrogate. He asked us if we had permission to be in the diplomatic quarters and due to some confusion, our permission form was lost. Since, both the teachers with us didn't speak Arabic, I was the person communicating to with the officer. After 15 minutes of interrogation, we continued our path to iHop, where we had breakfast and then headed back to school.</p>
 									<p>Throughout the field trip, I displayed my leadership in a variety of ways. First of all, I was leading the group through the hike with my classmate. Since both our instructors hadn't been on the trip before, we were given the opportunity to lead the group throughout our journey. I also displayed my leadership qualities when we were being interrogated by the Diplomatic Security Forces officer. I acted as a translater between the teachers incharge and the officer while explaining to the officer the purpose of the trip and our final destination.</p>
@@ -155,16 +155,16 @@
 									<span class="icon major fa-cog"></span>
 									<h3>Basketball</h3>
 									<h3>Action</h3>
-									<h3>Learning Outcome:</h3>
+									<h3>Learning Outcome: 1, 2, 4, 5</h3>
 									<p><u>Monday, February 4, 2019</u></p>
 									<p>After reflecting on my previous activities, I realized that I need to participate in more physical activities. So I decided to sign up for basketball tryouts in school and participate in more physcial activities. Today, was my first day and I realized that my fitness levels are below average because I was tired from the first ten minutes of practice. Compared to my fellow teammates who lasted the whole 30 minutes of practice. Afterwards, I decided to start to practice basketball outside training hours so I can improve my fitness while as well developing my of my hobbies.</p>
 									<p>Throughout the experience, I displayed my reflective skills. First of all, I reflected on my biking experience by deciding to participate in more physical activities during my weekly routines. Also, after participating in my first basketball training I decided to practice sports more to improve my fitness levels. Finally, I made through friends throughout this experience with students in lower grades and with our trainer, Mr. Tat Picott. Overall, it was a fun experience that began from a random experience with my family and by reflecting on the experience I was able to began practicing my hobby more for my own benefit.</p>
 								</section>
 								<section>
 									<span class="icon major fa-desktop"></span>
-									<h3>Personal Proect Volunteering</h3>
+									<h3>Personal Project Volunteering</h3>
 									<h3>Service</h3>
-									<h3>Learning Outcome:</h3>
+									<h3>Learning Outcome: 1, 3, 5</h3>
 									<p><u>Wednesday, February 6, 2019</u></p>
 									<p>Today, our school hosted the personal project exhibition for the Grade 10 students and I volunteered to act as a volunteer during the exhibition. When I arrived at the exhibition, I was directed to greet the parents and family members of students at the door and lead them to the exhibition from the gate. My friend and I were standing at the gate practicing how we will greet the parents. We decided that I will greet the parents and my friend will walk the parents to the exhibition.</p>
 									<p>During this experience, I displayed many IB learner profiles. First of all, I was a communicator by greeting the parents in the appropriate language. Most of the time I used Arabic to greet the parents, however some parents don't speak Arabic so I greeted them in English in an appropriate way. Also, I was responsible to represent the school infront of the parents so I need to respectful and reperesent the school in an appropriate way.</p>
@@ -173,7 +173,7 @@
 									<span class="icon major fa-desktop"></span>
 									<h3>Turkey Trip</h3>
 									<h3>Action</h3>
-									<h3>Learning Outcome:</h3>
+									<h3>Learning Outcome: 1, 2, 4, 5, 6</h3>
 									<p><u>Sunday, April 28, 2019</u></p>
 									<p>My friend from Kazakhstan invited my brother and I to attend his wedding in Shymkent, Kazakhstan and we decided to go. We going to transit in Istanbul before heading to Kazakhstan. To our disbelief, when we arrived in Istanbul we were informed that our flight to Shymkent was cancelled and that there weren't any other flights. We decided to stay in Istanbul and take our return flight back to Riyadh three days later. During these three days, I was incharge of being the tourist guide since my brother has never been to Istanbul and this is my fourth time in the city.</p>
 									<p>Throughout this experience, I improved many of my leadership skills and learned to depend on myself even more. My brother was depending on me to make these three days enjoyful while at the same time staying away from danger. Fortunately, we enjoyed our unplanned visit to Istanbul visiting many tourist attractions such as the Blue Mosque and Taksim Square, as well as many walks in Istanbul's fantastic shopping centers. </p>
@@ -182,7 +182,7 @@
 									<span class="icon major fa-desktop"></span>
 									<h3>Helping my Grandfather</h3>
 									<h3>Service</h3>
-									<h3>Learning Outcome:</h3>
+									<h3>Learning Outcome: 1, 2, 4, 5, 6, 7</h3>
 									<p><u>Sunday, May 26, 2019</u></p>
 									<p>During last year my grandfather from my mother's side has been suffering from health issues regarding his kidneys. At the beginning of 2019, his doctor decided that it was necessary for him to get a kidney transplant. Fortunately, the kidney transplant was successful but my grandfather was given a list of about 20 medications that he must take for the next year or so. So, I offered to create an Excel spreadsheet to organize the medications in the way he wanted.</p>
 									<p>From this experience, I helped a person in need for my assistance. Not only did I improve my knowledge about Microsoft Excel, but I taught my grandfather how to use Excel to change or cancel any medications in the near future. I believe that this experience made me feel better about myself and motivated me to make a difference in my society. This might seem like an easy task, but I had to make sure that all the information regarding doses and extra information therefore I was given huge responsibility with this task.</p>
@@ -191,7 +191,7 @@
 									<span class="icon major fa-desktop"></span>
 									<h3>Liverpool Trip</h3>
 									<h3>Action</h3>
-									<h3>Learning Outcome:</h3>
+									<h3>Learning Outcome: 1, 2, 3, 5</h3>
 									<p><u>Saturday, June 23, 2019</u></p>
 									<p>This summer, my family and I decided to take a trip to the UK, specifically London, for a week. During this trip, my family and I decided to visit Liverpool. Liverpool is significant to us because my mother was born in Liverpool and I support the local football club in Liverpool. We bought train tickets for a one-day trip to Liverpool and I was incharge of leading the group. Not only did we take the metro to get to the train station, but we had to change lines at one of the biggest metro stations in London. Luckily, I was able to navigate our way and get us to Liverpool safe and happy.</p>
 									<p>Throughout this experience, I demonstrated many leadership skills. Not only will these skills help me become a better leader, but they help me to become a more independent man. Since, this is my senior year and I plan to study abroad on my own, this experience gave me the opportunity to prove to my family that I am an independent young man. Also, this experience helped me understand how metros work around the world. This is significant because the Riyadh Metro is not far away from operating.</p>
@@ -200,7 +200,7 @@
 									<span class="icon major fa-desktop"></span>
 									<h3>Antibes International Center</h3>
 									<h3>Creativity</h3>
-									<h3>Learning Outcome:</h3>
+									<h3>Learning Outcome: 1, 2, 3, 4, 5, 6, 7</h3>
 									<p><u>Saturday, June 29, 2019-Saturday, July 27, 2019</u></p>
 									<p>This summer, I decided to take a French language course in Antibes, France. The course lasted 4 weeeks. During this trip, I stayed with a host family and 6 roommates in total over my 4 week stay. This was the first time I travelled without my family and I was completely independent for the first time in my life. I was responsible for my actions, my studies, and in how i will spend my time. In the end, this trip ended up being the best trip in my life despite the first couple of days being very tough for me emotionally.</p>
 									<p>During this trip, I learned many skills that will help me in the future. First of all, I learned how to be responsible by following school rules and regulations while having fun at the same time. Also, since I am a senior and plan to study abroad next year, this experience gave me a brief taste of how life might be like living on my own with new roommates in a completely new setting. I believe that this experience has set me up well to move on into a new chapter in my life.</p>
